src/test/ui/mir/mir_ascription_coercion.stderr
error: type ascriptions are not allowed in lvalue contexts
  --> $DIR/mir_ascription_coercion.rs:8:23
   |
LL |     let _y : &[i32] = &x : &[i32; 3];
   |                       ^^^^^^^^^^^^^^

error: aborting due to previous error

